--- a/PiggyPatchwork/View/Base.lproj/Main.storyboard
+++ b/PiggyPatchwork/View/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Prototype View Controller-->
+        <!--Collage View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="PrototypeViewController" customModule="PiggyPatchwork" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CollageViewController" customModule="PiggyPatchwork" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -73,7 +73,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="HZa-86-RcU" firstAttribute="leading" secondItem="FE3-Tr-52n" secondAttribute="leading" constant="20" id="0Xc-rb-yHh"/>
                                     <constraint firstItem="3kU-MO-UMY" firstAttribute="centerX" secondItem="FE3-Tr-52n" secondAttribute="centerX" id="6O3-Me-hVj"/>
@@ -102,6 +102,7 @@
                     <connections>
                         <outlet property="collageView" destination="HZa-86-RcU" id="RRl-pi-6XV"/>
                         <outlet property="collectionView" destination="n6Q-8Q-B6S" id="UqM-k4-PB4"/>
+                        <outlet property="gradientView" destination="FE3-Tr-52n" id="vDT-Yf-EXO"/>
                         <outlet property="selectionView" destination="WyR-M8-wYU" id="AqP-nH-I7B"/>
                     </connections>
                 </viewController>
