--- a/PiggyPatchwork/View/Prototype/Emoticon/EmoticonCollectionViewCell.xib
+++ b/PiggyPatchwork/View/Prototype/Emoticon/EmoticonCollectionViewCell.xib
@@ -20,15 +20,15 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fuC-sb-tHk">
-                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                        <rect key="frame" x="10" y="0.0" width="60" height="80"/>
                     </imageView>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="fuC-sb-tHk" firstAttribute="leading" secondItem="v5U-8W-pBM" secondAttribute="leading" id="Afy-Yc-TuG"/>
+                <constraint firstItem="fuC-sb-tHk" firstAttribute="leading" secondItem="v5U-8W-pBM" secondAttribute="leading" constant="10" id="Afy-Yc-TuG"/>
                 <constraint firstAttribute="bottom" secondItem="fuC-sb-tHk" secondAttribute="bottom" id="B4F-3P-tF2"/>
                 <constraint firstItem="fuC-sb-tHk" firstAttribute="top" secondItem="v5U-8W-pBM" secondAttribute="top" id="jre-sO-Nqo"/>
-                <constraint firstAttribute="trailing" secondItem="fuC-sb-tHk" secondAttribute="trailing" id="n7S-Ap-6ii"/>
+                <constraint firstAttribute="trailing" secondItem="fuC-sb-tHk" secondAttribute="trailing" constant="10" id="n7S-Ap-6ii"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="8qI-8j-EwI"/>
             <connections>
